// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton renders correct element 1`] = `
.emotion-0 {
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  font-weight: 300;
  line-height: 1.5;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 16px;
  padding-right: 16px;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: var(--theme-ui-colors-brand-primary);
  height: 32px;
  min-width: 32px;
  color: var(--theme-ui-colors-ui-white);
  fill: var(--theme-ui-colors-ui-white);
}

.emotion-0:focus,
.emotion-0:hover {
  background-color: #2d6da3;
  color: var(--theme-ui-colors-ui-white);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.2em rgba(0, 109, 255, 0.4);
}

.emotion-0:active {
  background-color: #285f8f;
}

.emotion-0:disabled {
  background-color: var(--theme-ui-colors-ui-gray-light);
  color: var(--theme-ui-colors-ui-gray-extraDark);
  cursor: default;
}

<a
  class="emotion-0"
  href="http://some.com/external"
>
  child
</a>
`;

exports[`NavButton renders correct element 1`] = `
.emotion-0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--theme-ui-colors-ui-white);
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  font-weight: 300;
  line-height: 1.5;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 16px;
  padding-right: 16px;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  background-color: var(--theme-ui-colors-brand-primary);
  height: 32px;
  min-width: 32px;
  fill: var(--theme-ui-colors-ui-white);
}

.emotion-0:hover {
  color: inherit;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:focus,
.emotion-0:hover {
  background-color: #2d6da3;
  color: var(--theme-ui-colors-ui-white);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.2em rgba(0, 109, 255, 0.4);
}

.emotion-0:active {
  background-color: #285f8f;
}

.emotion-0:disabled {
  background-color: var(--theme-ui-colors-ui-gray-light);
  color: var(--theme-ui-colors-ui-gray-extraDark);
  cursor: default;
}

<a
  class="emotion-0"
  href="/testlib/somewhere"
>
  child
</a>
`;

exports[`variants filled (default) 1`] = `
.emotion-0 {
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  font-weight: 300;
  line-height: 1.5;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 16px;
  padding-right: 16px;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: var(--theme-ui-colors-brand-primary);
  height: 32px;
  min-width: 32px;
  color: var(--theme-ui-colors-ui-white);
  fill: var(--theme-ui-colors-ui-white);
}

.emotion-0:focus,
.emotion-0:hover {
  background-color: #2d6da3;
  color: var(--theme-ui-colors-ui-white);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.2em rgba(0, 109, 255, 0.4);
}

.emotion-0:active {
  background-color: #285f8f;
}

.emotion-0:disabled {
  background-color: var(--theme-ui-colors-ui-gray-light);
  color: var(--theme-ui-colors-ui-gray-extraDark);
  cursor: default;
}

<button
  class="emotion-0"
  type="button"
>
  child
</button>
`;

exports[`variants ghost 1`] = `
.emotion-0 {
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  line-height: 1.5;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 16px;
  padding-right: 16px;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  height: 32px;
  min-width: 32px;
  color: var(--theme-ui-colors-brand-primary);
  fill: var(--theme-ui-colors-brand-primary);
}

.emotion-0:focus,
.emotion-0:hover {
  background-color: #c3daee;
  color: var(--theme-ui-colors-brand-primary);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.2em rgba(0, 109, 255, 0.4);
}

<button
  class="emotion-0"
  type="button"
>
  child
</button>
`;

exports[`variants link 1`] = `
.emotion-0 {
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 16px;
  padding-right: 16px;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  background-color: transparent;
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-weight: 300;
  line-height: 1.5;
  color: var(--theme-ui-colors-brand-primary);
  padding: 0;
  fill: var(--theme-ui-colors-brand-primary);
}

.emotion-0:hover {
  color: var(--theme-ui-colors-brand-primary);
}

<button
  class="emotion-0"
  type="button"
>
  child
</button>
`;
